--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,13 @@
 <ol class="post-list">
   {{#each posts as |post|}}
   <li>
-    {{> post-info post}}
+    <ol class="post-list">
+    {{#each posts as |post|}}
+      <li>
+        {{> post-info post }}
+      </li>
+  {{/each}}
+</ol>
   </li>
   {{/each}}
 </ol>
