--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,15 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Just Tech News</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
+  <title>The Tech Blog</title>
+  <link rel="stylesheet" href="/public/stylesheets/style.css">
 </head>
 
 <body>
   <div class="wrapper">
     <header>
       <h1>
-        <a href="/">Just Tech News</a>
+        <a href="/">The Tech Blog</a>
       </h1>
       <nav>
       {{#if loggedIn}}
