--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,4 +1,12 @@
-{{> post-info post}}
+<article class="post">
+  <ol class="post-list">
+  {{#each posts as |post|}}
+  <li>
+    {{> post-info post }}
+  </li>
+  {{/each}}
+</ol>
+</article>
 
 {{#if loggedIn}}
 <form class="comment-form">
@@ -8,7 +16,6 @@
 
   <div>
     <button type="submit">add comment</button>
-    <button type="button" class="upvote-btn">upvote</button>
   </div>
 </form>
 {{/if}}
@@ -17,5 +24,4 @@
 
 {{#if loggedIn}}
 <script src="/javascript/comment.js"></script>
-<script src="/javascript/upvote.js"></script>
 {{/if}}
