--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -23,5 +23,5 @@
 {{> comments post.comments}}
 
 {{#if loggedIn}}
-<script src="/javascript/comment.js"></script>
+<script src="/public/javascript/comment.js"></script>
 {{/if}}
